// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli-test should output checkup result in verbose mode 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines of code
■ hbs (1)
■ js (1)


checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84
"
`;

exports[`cli-test should run a single task if the tasks option is specified with a single task 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (7 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)


checkup v0.0.0
config 01f059d31fb4418b3792d2818b02a083
"
`;

exports[`cli-test should run multiple tasks if the tasks option is specified with multiple tasks 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (7 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)

=== Best Practices

File Count

■ file-count result (1)

Foo

■ foo result (1)


checkup v0.0.0
config 01f059d31fb4418b3792d2818b02a083
"
`;

exports[`cli-test should run only one task if the category option is specified 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (7 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)


checkup v0.0.0
config 01f059d31fb4418b3792d2818b02a083
"
`;
